@@ -1,6 +1,6 @@
 package com.example.demo.web.auth;
 
-import com.example.demo.util.connection.DocsConnection;
+import com.example.demo.util.datasource.connection.DocsConnection;
 import com.google.api.client.auth.oauth2.Credential;
 import com.google.api.client.extensions.java6.auth.oauth2.AuthorizationCodeInstalledApp;
 import com.google.api.client.extensions.jetty.auth.oauth2.LocalServerReceiver;
@@ -9,13 +9,12 @@ import com.google.api.client.googleapis.auth.oauth2.GoogleClientSecrets;
 import com.google.api.client.http.javanet.NetHttpTransport;
 import com.google.api.client.json.gson.GsonFactory;
 import com.google.api.client.util.store.FileDataStoreFactory;
-import com.google.api.services.docs.v1.DocsScopes;
+import com.google.api.services.drive.DriveScopes;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.Collections;
 import java.util.List;
 
 public class Credentials {
@@ -23,8 +22,8 @@ public class Credentials {
     private static final String TOKENS_DIRECTORY_PATH = "tokens";
     private static final GsonFactory JSON_FACTORY = GsonFactory.getDefaultInstance();
     private static final List<String> SCOPES =
-            Collections.singletonList(DocsScopes.DRIVE);
-    private static final Credential credential = null;
+            List.of(DriveScopes.DRIVE);
+    private static Credential credential = null;
 
     /**
      * CREDENTIALS_FILE_PATH: Directory to store authorization tokens for this application.
@@ -56,9 +55,13 @@ public class Credentials {
                 .build();
 
         LocalServerReceiver receiver = new LocalServerReceiver.Builder().setPort(8888).build();
-        Credential credential = new AuthorizationCodeInstalledApp(flow, receiver).authorize("user");
+        credential = new AuthorizationCodeInstalledApp(flow, receiver).authorize("user");
         //returns an authorized Credential object.
         return credential;
+    }
+
+    public static String getAccessToken(){
+        return credential.getAccessToken();
     }
 
 }
